<resources>
    <string name="app_name">My Basic Activity App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="game_list_fragment_label">Game List</string>
    <string name="game_edit_fragment_label">Game Edit</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="game_list_fragment">Game list fragment</string>
    <string name="game_edit_fragment">Game edit fragment</string>
    <string name="addGame">addGame</string>
    <string name="save_changes">Save changes</string>
    <string name="negative">Negative:</string>
    <string name="owners">Owners:</string>
    <string name="price">Price:</string>
    <string name="positive">Positive:</string>
    <string name="developer">Developer:</string>
    <string name="name">Name:</string>
    <string name="appid">Appid:</string>
    <string name="deleteGame">deleteGame</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
</resources>