<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/GameListFragment">

    <fragment
        android:id="@+id/fragment_login"
        android:name="com.example.mobileandroid.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/GameListFragment"
        android:name="com.example.mobileandroid.gameLogic.games.GameListFragment"
        android:label="@string/game_list_fragment_label"
        tools:layout="@layout/fragment_game_list">

        <action
            android:id="@+id/action_GameListFragment_to_GameEditFragment"
            app:destination="@id/GameEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/GameEditFragment"
        android:name="com.example.mobileandroid.gameLogic.game.GameEditFragment"
        android:label="@string/game_edit_fragment_label"
        tools:layout="@layout/fragment_game_edit">

        <action
            android:id="@+id/action_GameEditFragment_to_GameListFragment"
            app:destination="@id/GameListFragment" />
    </fragment>
</navigation>