<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".game.GameEditFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/appid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:labelFor="@id/game_appid"
            android:text="@string/appid" />

        <EditText
            android:id="@+id/game_appid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appid_layout">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:labelFor="@id/game_name"
            android:text="@string/name" />

        <EditText
            android:id="@+id/game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/developer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_layout">

        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:labelFor="@id/game_developer"
            android:text="@string/developer" />

        <EditText
            android:id="@+id/game_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/positive_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developer_layout">

        <TextView
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:labelFor="@id/game_positive"
            android:text="@string/positive" />

        <EditText
            android:id="@+id/game_positive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/negative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/positive_layout">

        <TextView
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:labelFor="@id/game_negative"
            android:text="@string/negative" />

        <EditText
            android:id="@+id/game_negative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/owners_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/negative_layout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:labelFor="@id/game_owners"
            android:text="@string/owners" />

        <EditText
            android:id="@+id/game_owners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/owners_layout">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:labelFor="@id/game_price"
            android:text="@string/price" />

        <EditText
            android:id="@+id/game_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/deleteGame"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save_changes"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>